--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,6 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-blogging-plugin
       - run: pip install mkdocs-git-revision-date-localized-plugin
-      - run: pip install mkdocs-glightbox    
-      - run: pip install mkpdfs-mkdocs
+      - run: pip install mkdocs-glightbox  
+      - run: pip install mkdocs-pdf
       - run: mkdocs gh-deploy --force
