--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -194,6 +194,7 @@ nav:
           - reference: projects/KnowledgeBrain/reference.md
   - 🤗Other:
       - Faiss召回: ./other/什么是召回.md
+      - Rerank 在RAG里的作用: ./other/rerank_llm.md
 
 # 插件配置
 plugins:
